@@ -1230,6 +1230,18 @@ raw
     Passes the content along, mostly used so I can write this damn section and you can see the shortcodes instead
     of them being munged into shortcode **output**. I can't show an example because Inception.
 
+thumbnail
+    Display image thumbnails, optionally with captions, alignment, and alt text. Examples:
+
+    .. code:: text
+
+        {{% raw %}}{{% thumbnail url="/images/foo.png" %}}{{% /thumbnail %}}{{% /raw %}}
+        {{% raw %}}{{% thumbnail url="/images/foo.png" alt="Foo Image" align="center" %}}{{% /thumbnail %}}{{% /raw %}}
+        {{% raw %}}{{% thumbnail url="/images/foo.png" %}}Image caption{{% /thumbnail %}}{{% /raw %}}
+        {{% raw %}}{{% thumbnail url="/images/foo.png" alt="Foo Image" align="right" %}}Right-aligned Foo Image caption{{% /thumbnail %}}{{% /raw %}}
+
+
+    Looks similar to the reST thumbnail directive.
 
 Community shortcodes
 ~~~~~~~~~~~~~~~~~~~~
